Minor spacing and a tag fixes

--- a/friends.css
+++ b/friends.css
@@ -4,3 +4,19 @@
   border: 2px solid #336799 !important ;
   border-color: #336799 !important; /* Ensures the border color applies to each cell */
 }
+
+a.friends-a:visited {
+  color: white;
+}
+
+.friends-main {
+  justify-content: flex-start;
+}
+
+.friends-header {
+  margin-top: 2.5rem;
+}
+
+.friends-table {
+  margin-top: 4.5rem;
+}
